# games

./: .gitignore  CMakeLists.txt  README.md  snake.c
snake/: snake.c  snake.zig
src/: launcher.sh.in  minesweeper.c  snake.c
